<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/add"
        android:title="@string/action_add"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_drop"
        android:icon="@drawable/drop"
        android:title="@string/action_drop"
        app:showAsAction="always"
        android:visible="false"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/edit"
        app:showAsAction="always"
        android:visible="false"
        tools:ignore="AlwaysShowAction" />
</menu>